--- a/first_map.html
+++ b/first_map.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>CHANGE LATER</title>
+  <title>Campus Early Voting</title>
   <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
@@ -17,11 +17,11 @@
     </div>
 
    <div id="explanation">
-     <p>Before the 2018 general election, college campuses in Florida were barred from serving as early voting locations. The markers on the map illustrates the campuses that had the highest turnout for early voting.</p>
+     <p>Before the 2018 general election, college campuses in Florida were barred from serving as early voting locations. The markers on the map illustrate the campuses that had the highest turnout for early voting in the general election.</p>
    </div>
 
     <footer>
-      This page was created by Madison Hindo. View the GitHub repo <a href="">here</a>.
+      This page was created by Madison Hindo. View the GitHub repo <a href="https://github.com/madisonhindo/leaflet-project">here</a>.
     </footer>
   </article>
 
