--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
 </head>
 <body>
   <article>
-    <h1>Alachua County 2018 Florida House District 21 Democratic Precinct Data</h1>
+    <h1>2018 Florida House District 21 Democratic Precinct Data</h1>
 
     <div id="jasonMap">
     </div>
 
     <div id="explanation">
-      <p>
-        This map shows all of the precincts in Alachua County where Jason Haeseler won 50 percent or more of the vote for the Florida House District 21 seat. Democrat Jason Haeseler won 55.14 percent of the vote in Alachua County. This encompasses Alachua, Dixie and Gilchrist counties. Ultimately, Haeseler lost to incumbent Chuck Clemons.
-      </p>
+      <p>This map shows all of the precincts in Alachua County where Jason Haeseler (D) won 50 percent or more of the vote for the Florida House District 21 seat. Haeseler won 55.14 percent of the vote in Alachua.</p>
+
+      <p>This district encompasses part of Alachua County and all of Dixie and Gilchrist counties. Ultimately, Haeseler lost to incumbent Chuck Clemons.</p>
+
+      <p> General election data for this race can be found <a href="https://www.votealachua.com/Portals/Alachua/Documents/Election_Results/OfficialSOVC_Includes%20Recount.pdf">here</a>.</p>
     </div>
 
     <footer>
-      This page was created by Madison Hindo. View the GitHub repo <a href="">here</a>.
+      This page was created by Madison Hindo. View the GitHub repo <a href="https://github.com/madisonhindo/leaflet-project">here</a>.
     </footer>
   </article>
 
